# SSR-Lightweight-School-System

./: Cargo.toml  LICENSE  README.md
migrations/: 0001_schooldb01.sql
src/: app_error.rs  main.rs
src/functions/assignments/: assignments.rs  mod.rs  models.rs  queries.rs
src/functions/course/: course.rs  mod.rs  models.rs  queries.rs
src/functions/department/: department.rs  mod.rs  models.rs  queries.rs
src/functions/employee/: employee.rs  mod.rs  models.rs  queries.rs  templates.rs
src/functions/student/: mod.rs  models.rs  queries.rs  student.rs  templates.rs
src/functions/teacher/: mod.rs  models.rs  queries.rs  teacher.rs
src/functions/tutorial/: mod.rs  models.rs  queries.rs  tutorial.rs
src/functions/views/: mod.rs
src/functions/views/course/: course_view.rs  mod.rs
src/functions/views/department/: department_view.rs  mod.rs
src/functions/views/employee/: employee_view.rs  mod.rs
src/functions/views/login/: login_view.rs
src/functions/views/student/: mod.rs  register_student.rs  student_view.rs
static/: index.css
templates/: base.html  course.html  department.html  employee.html  error.html  error_msg.html  htmx.html  login.html  register_student.html  students.html  success_message.html  tutorial.html
templates/home_templates/: home_main.html
templates/nav_buttons/: course.html  department.html  employee.html  student.html  teacher.html  tutorial.html
