[package]
name = "school_system"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "any",
    "postgres",
    "chrono",
    "bigdecimal"
] }
chrono = { version = "0.4", features = ["serde"] }
actix-web = "4"
dotenvy = "0.15.0"
env_logger = "0.11.8"
uuid = { version = "1.17.0", features = ["v4"] }
bcrypt = "0.17.0"
log = "0.4.27"
actix-cors = "0.7.1"
lettre = "0.11"
bigdecimal = "=0.4.1"
askama = "0.14.0"
displaydoc = "0.2"
thiserror = "2.0.12"
actix-files = "0.6.6"